fix: update spacing for form

--- a/styles/pins_new.scss
+++ b/styles/pins_new.scss
@@ -4,7 +4,7 @@
   justify-content: flex-end;
   align-items: center;
   flex-wrap: wrap;
-  margin-top: 75px;
+  margin-top: 95px;
   margin-bottom: 25px;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   background-color: #fff;
@@ -17,7 +17,7 @@ form {
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap:1.5em;
+  gap: 1.5em;
 }
 
 form h2 {
